Fix UnsupportedOperationException when shuffling players.